added app logos

--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@
                         <div class="card-apps-title">
                             <p>Super Apps inclusos no plano</p>
                         </div>
-                        <div class="card-apps-img">
-
+                        <div class="apps-img-container">
+                            <div class="card-apps-img">
+                                <img class="appLogo" src="./assets/HBO_Max-Logo.wine.svg" alt="HBOMAXLogo">
+                                <img class="appLogo" src="./assets/Deezer-Logo.wine.svg" alt="DeezerLogo">
+                            </div>
                         </div>
                     </div>
                     <hr>
@@ -99,8 +102,11 @@
                         <div class="card-apps-title">
                             <p>Super Apps inclusos no plano</p>
                         </div>
-                        <div class="card-apps-img">
-
+                        <div class="apps-img-container">
+                            <div class="card-apps-img">
+                                <img class="appLogo" src="./assets/HBO_Max-Logo.wine.svg" alt="HBOMAXLogo">
+                                <img class="appLogo" src="./assets/Deezer-Logo.wine.svg" alt="DeezerLogo">
+                            </div>
                         </div>
                     </div>
                     <hr>
@@ -148,8 +154,11 @@
                         <div class="card-apps-title">
                             <p>Super Apps inclusos no plano</p>
                         </div>
-                        <div class="card-apps-img">
-
+                        <div class="apps-img-container">
+                            <div class="card-apps-img">
+                                <img class="appLogo" src="./assets/HBO_Max-Logo.wine.svg" alt="HBOMAXLogo">
+                                <img class="appLogo" src="./assets/Deezer-Logo.wine.svg" alt="DeezerLogo">
+                            </div>
                         </div>
                     </div>
                     <hr>
