--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <h3>300 Mega</h3>
                         </div>
                         <div class="card-benefits">
-                            <h4>Wi-fi e instalação grátis</h4>
+                            <h4>Wi-Fi e instalação grátis</h4>
                         </div>
                     </div>
                     <div class="card-apps">
@@ -95,7 +95,7 @@
                             <h3>500 Mega</h3>
                         </div>
                         <div class="card-benefits">
-                            <h4>Wi-fi e instalação grátis</h4>
+                            <h4>Wi-Fi e instalação grátis</h4>
                         </div>
                     </div>
                     <div class="card-apps">
@@ -147,7 +147,7 @@
                             <h3>700 Mega</h3>
                         </div>
                         <div class="card-benefits">
-                            <h4>Wi-fi e instalação grátis</h4>
+                            <h4>Wi-Fi e instalação grátis</h4>
                         </div>
                     </div>
                     <div class="card-apps">
