--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="card-button">
                         <a href="#" class="btn">Assine já</a>
                     </div>
-                    <div onclick="displayDetails(this)" class="more-details">
+                    <!-- <div onclick="displayDetails(this)" class="more-details">
                         <p >Mais detalhes</p>
                     </div>
                     <div class="card-details">
@@ -82,7 +82,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="card">
                     <div class="card-header">
@@ -117,7 +117,7 @@
                     <div class="card-button">
                         <a href="#" class="btn">Assine já</a>
                     </div>
-                    <div onclick="displayDetails(this)" class="more-details">
+                    <!-- <div onclick="displayDetails(this)" class="more-details">
                         <p >Mais detalhes</p>
                     </div>
                     <div class="card-details">
@@ -138,7 +138,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="card">
 
@@ -171,7 +171,7 @@
                     <div class="card-button">
                         <a href="#" class="btn">Assine já</a>
                     </div>
-                    <div onclick="displayDetails(this)" class="more-details">
+                    <!-- <div onclick="displayDetails(this)" class="more-details">
                         <p >Mais detalhes</p>
                     </div>
                     <div class="card-details">
@@ -192,7 +192,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
