adjust best offer

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             </div>
             <div class="header-2">
                 <div class="title">Internet Fibra na Velocidade da Luz</div>
-                <div class="sub-title">As melhores ofertas para o seu dia-a-dia</div>
+                <div class="sub-title">
+                    As melhores ofertas para o seu dia-a-dia
                 </div>
             </div>
         </header>
@@ -45,8 +46,16 @@
                     </div>
                     <div class="card-apps">
                         <div class="apps-img-container">
-                            <img class="appLogo" src="./assets/HBO_Max-Logo.wine.svg" alt="HBOMAXLogo">
-                            <img class="appLogo" src="./assets/Deezer-Logo.wine.svg" alt="DeezerLogo">
+                            <img
+                                class="appLogo"
+                                src="./assets/HBO_Max-Logo.wine.svg"
+                                alt="HBOMAXLogo"
+                            />
+                            <img
+                                class="appLogo"
+                                src="./assets/Deezer-Logo.wine.svg"
+                                alt="DeezerLogo"
+                            />
                         </div>
                     </div>
                     <div class="card-price">
@@ -95,8 +104,16 @@
                     </div>
                     <div class="card-apps">
                         <div class="apps-img-container">
-                            <img class="appLogo" src="./assets/HBO_Max-Logo.wine.svg" alt="HBOMAXLogo">
-                            <img class="appLogo" src="./assets/Deezer-Logo.wine.svg" alt="DeezerLogo">
+                            <img
+                                class="appLogo"
+                                src="./assets/HBO_Max-Logo.wine.svg"
+                                alt="HBOMAXLogo"
+                            />
+                            <img
+                                class="appLogo"
+                                src="./assets/Deezer-Logo.wine.svg"
+                                alt="DeezerLogo"
+                            />
                         </div>
                     </div>
                     <div class="card-price">
@@ -129,7 +146,6 @@
                     </div> -->
                 </div>
                 <div class="card">
-
                     <div class="card-header">
                         <div class="card-title">
                             <p>Navelink Fibra Light</p>
@@ -143,8 +159,16 @@
                     </div>
                     <div class="card-apps">
                         <div class="apps-img-container">
-                            <img class="appLogo" src="./assets/HBO_Max-Logo.wine.svg" alt="HBOMAXLogo">
-                            <img class="appLogo" src="./assets/Deezer-Logo.wine.svg" alt="DeezerLogo">
+                            <img
+                                class="appLogo"
+                                src="./assets/HBO_Max-Logo.wine.svg"
+                                alt="HBOMAXLogo"
+                            />
+                            <img
+                                class="appLogo"
+                                src="./assets/Deezer-Logo.wine.svg"
+                                alt="DeezerLogo"
+                            />
                         </div>
                     </div>
                     <div class="card-price">
