--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
                 <div class="city"><i class="bi bi-geo-alt"></i> Limeira</div>
             </div>
             <div class="header-2">
-                <div class="title">Internet Fibra na Velocidade da Luz</div>
-                <div class="sub-title">
-                    As melhores ofertas para o seu dia-a-dia
+                <div class="rotate">
+                    <div class="title">INTERNET FIBRA</div>
+                    <div class="title-2">NA VELOCIDADE</div>
+                    <div class="title speed-effect">DA LUZ</div>
                 </div>
             </div>
         </header>
@@ -34,9 +35,6 @@
             <div class="card-container">
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title">
-                            <p>Navelink Fibra Light</p>
-                        </div>
                         <div class="card-speed">
                             <h3>300 Mega</h3>
                         </div>
@@ -62,7 +60,7 @@
                         <h2>R$89,00/mês</h2>
                     </div>
                     <div class="card-button">
-                        <a href="#" class="btn">Assine já</a>
+                        <a href="#" class="btn">ASSINE JÁ</a>
                     </div>
                     <!-- <div onclick="displayDetails(this)" class="more-details">
                         <p >Mais detalhes</p>
@@ -88,12 +86,11 @@
                     </div> -->
                 </div>
                 <div class="card">
-                    <div class="bestOffer">
-                        <p>Melhor escolha</p>
-                    </div>
                     <div class="card-header">
-                        <div class="card-title">
-                            <p>Navelink Fibra Light</p>
+                        <div class="bestOffer">
+                            <p>
+                                <i class="bi bi-star-fill"></i> MELHOR ESCOLHA
+                            </p>
                         </div>
                         <div class="card-speed">
                             <h3>500 Mega</h3>
@@ -120,7 +117,7 @@
                         <h2>R$100,00/mês</h2>
                     </div>
                     <div class="card-button">
-                        <a href="#" class="btn">Assine já</a>
+                        <a href="#" class="btn">QUERO ESSE</a>
                     </div>
                     <!-- <div onclick="displayDetails(this)" class="more-details">
                         <p >Mais detalhes</p>
@@ -147,9 +144,6 @@
                 </div>
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title">
-                            <p>Navelink Fibra Light</p>
-                        </div>
                         <div class="card-speed">
                             <h3>700 Mega</h3>
                         </div>
@@ -175,7 +169,7 @@
                         <h2>R$120,00/mês</h2>
                     </div>
                     <div class="card-button">
-                        <a href="#" class="btn">Assine já</a>
+                        <a href="#" class="btn">ASSINE JÁ</a>
                     </div>
                     <!-- <div onclick="displayDetails(this)" class="more-details">
                         <p >Mais detalhes</p>
