adjust sections sizes

--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
                         <a href="#" class="btn">ASSINE JÁ</a>
                     </div>
                     <div onclick="displayDetails(this)" class="more-details">
-                        <p>Mais detalhes</p>
+                        <p>MAIS DETALHES</p>
                     </div>
                     <div class="card-details">
                         <div class="apps-details">
                             <h4>Download de até 300Mbps</h4>
+                            <small>Upload de até 150Mbps</small>
                         </div>
                         <div class="apps-details">
                             <h4>3 Apps inclusos no plano</h4>
@@ -119,11 +120,12 @@
                         <a href="#" class="btn">QUERO ESSE</a>
                     </div>
                     <div onclick="displayDetails(this)" class="more-details">
-                        <p>Mais detalhes</p>
+                        <p>MAIS DETALHES</p>
                     </div>
                     <div class="card-details">
                         <div class="apps-details">
-                            <h4>Download de até 300Mbps</h4>
+                            <h4>Download de até 500Mbps</h4>
+                            <small>Upload de até 250Mbps</small>
                         </div>
                         <div class="apps-details">
                             <h4>3 Apps inclusos no plano</h4>
@@ -163,11 +165,12 @@
                         <a href="#" class="btn">ASSINE JÁ</a>
                     </div>
                     <div onclick="displayDetails(this)" class="more-details">
-                        <p>Mais detalhes</p>
+                        <p>MAIS DETALHES</p>
                     </div>
                     <div class="card-details">
                         <div class="apps-details">
-                            <h4>Download de até 300Mbps</h4>
+                            <h4>Download de até 700Mbps</h4>
+                            <small>Upload de até 350Mbps</small>
                         </div>
                         <div class="apps-details">
                             <h4>3 Apps inclusos no plano</h4>
