added logo section

--- a/index.html
+++ b/index.html
@@ -47,22 +47,40 @@
                             <i class="bi bi-plus-circle"></i>
                         </div>
                     </div>
-                    <div class="card-apps">
-                        <div class="apps-img-container">
+                    <div class="apps-img-container">
+                        <div class="teste">
                             <img
                                 class="appLogo"
-                                src="./assets/HBO_Max-Logo.wine.svg"
+                                src="./assets/looke-logo.png"
                                 alt="HBOMAXLogo"
                             />
+                        </div>
+                        <img
+                            class="teste"
+                            src="./assets/deezer-logo.png"
+                            alt="HBOMAXLogo"
+                        />
+                        <div class="teste">
                             <img
-                                class="appLogo"
-                                src="./assets/Deezer-Logo.wine.svg"
-                                alt="DeezerLogo"
+                                class="appLogo max"
+                                src="./assets/max-logo.png"
+                                alt="HBOMAXLogo"
                             />
                         </div>
                     </div>
+                    <div class="container">
+                        <div class="line"></div>
+                    </div>
                     <div class="card-price">
-                        <h2>R$89,00/mês</h2>
+                        <div class="first">
+                            <p>Por:</p>
+                            <p>R$</p>
+                        </div>
+                        <h2>89</h2>
+                        <div class="second">
+                            <p>90</p>
+                            <p>/mês*</p>
+                        </div>
                     </div>
                     <div class="card-button">
                         <a href="#" class="btn">ASSINE JÁ</a>
@@ -99,22 +117,40 @@
                             <i class="bi bi-plus-circle"></i>
                         </div>
                     </div>
-                    <div class="card-apps">
-                        <div class="apps-img-container">
+                    <div class="apps-img-container">
+                        <div class="teste">
                             <img
                                 class="appLogo"
-                                src="./assets/HBO_Max-Logo.wine.svg"
+                                src="./assets/looke-logo.png"
                                 alt="HBOMAXLogo"
                             />
+                        </div>
+                        <img
+                            class="teste"
+                            src="./assets/deezer-logo.png"
+                            alt="HBOMAXLogo"
+                        />
+                        <div class="teste">
                             <img
-                                class="appLogo"
-                                src="./assets/Deezer-Logo.wine.svg"
-                                alt="DeezerLogo"
+                                class="appLogo max"
+                                src="./assets/max-logo.png"
+                                alt="HBOMAXLogo"
                             />
                         </div>
                     </div>
+                    <div class="container">
+                        <div class="line"></div>
+                    </div>
                     <div class="card-price">
-                        <h2>R$100,00/mês</h2>
+                        <div class="first">
+                            <p>Por:</p>
+                            <p>R$</p>
+                        </div>
+                        <h2>100</h2>
+                        <div class="second">
+                            <p>90</p>
+                            <p>/mês*</p>
+                        </div>
                     </div>
                     <div class="card-button">
                         <a href="#" class="btn">QUERO ESSE</a>
@@ -147,19 +183,39 @@
                         </div>
                     </div>
                     <div class="apps-img-container">
+                        <div class="teste">
+                            <img
+                                class="appLogo"
+                                src="./assets/looke-logo.png"
+                                alt="HBOMAXLogo"
+                            />
+                        </div>
                         <img
-                            class="appLogo"
-                            src="./assets/HBO_Max-Logo.wine.svg"
+                            class="teste"
+                            src="./assets/deezer-logo.png"
                             alt="HBOMAXLogo"
                         />
-                        <img
-                            class="appLogo"
-                            src="./assets/Deezer-Logo.wine.svg"
-                            alt="DeezerLogo"
-                        />
+                        <div class="teste">
+                            <img
+                                class="appLogo max"
+                                src="./assets/max-logo.png"
+                                alt="HBOMAXLogo"
+                            />
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="line"></div>
                     </div>
                     <div class="card-price">
-                        <h2>R$120,00/mês</h2>
+                        <div class="first">
+                            <p>Por:</p>
+                            <p>R$</p>
+                        </div>
+                        <h2>120</h2>
+                        <div class="second">
+                            <p>90</p>
+                            <p>/mês*</p>
+                        </div>
                     </div>
                     <div class="card-button">
                         <a href="#" class="btn">ASSINE JÁ</a>
