added icons more-details

--- a/index.html
+++ b/index.html
@@ -90,10 +90,18 @@
                     </div>
                     <div class="card-details">
                         <div class="apps-details">
-                            <h4>Download de até 300Mbps</h4>
-                            <small>Upload de até 150Mbps</small>
+                            <div class="icon">
+                                <i class="bi bi-speedometer"></i>
+                            </div>
+                            <div class="app-details-text">
+                                <h4>Download de até 300Mbps</h4>
+                                <small>Upload de até 150Mbps</small>
+                            </div>
                         </div>
                         <div class="apps-details">
+                            <div class="icon">
+                                <i class="bi bi-grid"></i>
+                            </div>
                             <h4>3 Apps inclusos no plano</h4>
                         </div>
                     </div>
@@ -160,10 +168,18 @@
                     </div>
                     <div class="card-details">
                         <div class="apps-details">
-                            <h4>Download de até 500Mbps</h4>
-                            <small>Upload de até 250Mbps</small>
+                            <div class="icon">
+                                <i class="bi bi-speedometer"></i>
+                            </div>
+                            <div class="app-details-text">
+                                <h4>Download de até 300Mbps</h4>
+                                <small>Upload de até 150Mbps</small>
+                            </div>
                         </div>
                         <div class="apps-details">
+                            <div class="icon">
+                                <i class="bi bi-grid"></i>
+                            </div>
                             <h4>3 Apps inclusos no plano</h4>
                         </div>
                     </div>
@@ -225,10 +241,18 @@
                     </div>
                     <div class="card-details">
                         <div class="apps-details">
-                            <h4>Download de até 700Mbps</h4>
-                            <small>Upload de até 350Mbps</small>
+                            <div class="icon">
+                                <i class="bi bi-speedometer"></i>
+                            </div>
+                            <div class="app-details-text">
+                                <h4>Download de até 300Mbps</h4>
+                                <small>Upload de até 150Mbps</small>
+                            </div>
                         </div>
                         <div class="apps-details">
+                            <div class="icon">
+                                <i class="bi bi-grid"></i>
+                            </div>
                             <h4>3 Apps inclusos no plano</h4>
                         </div>
                     </div>
