adicionado section banefits

--- a/index.html
+++ b/index.html
@@ -259,6 +259,55 @@
                     </div>
                 </div>
             </div>
+            <div class="benefits">
+                <div class="benefits-header">
+                    <div class="benefits-title">
+                        <h1>NÃO FIQUE</h1>
+                        <label class="switch">
+                            <input
+                                type="checkbox"
+                                disabled
+                                checked
+                                class="hidden-toggle"
+                            />
+                            <div class="slider">
+                                <div class="button"></div>
+                            </div>
+                        </label>
+                    </div>
+                    <h3>Fique sempre ON com as vantagens da Navelink</h3>
+                </div>
+                <div class="advantages">
+                    <div class="card-advantages">
+                        <h4>CONEXÃO ESTÁVEL</h4>
+                        <p>
+                            Navegue tranquilamente no seu dia a dia sem
+                            preocupar-se com interrupções.
+                        </p>
+                    </div>
+                    <div class="card-advantages">
+                        <h4>ALTA TECNOLOGIA</h4>
+                        <p>
+                            Trabalhamos com o que há de mais moderno para
+                            garantir melhor conexão para você cliente.
+                        </p>
+                    </div>
+                    <div class="card-advantages">
+                        <h4>TRÁFEGO LIMITADO</h4>
+                        <p>
+                            Acesse seus sites, baixe músicas e assista vídeos
+                            sem se preocupar com limite de tráfego.
+                        </p>
+                    </div>
+                    <div class="card-advantages">
+                        <h4>SUPORTE PROFISSIONAL</h4>
+                        <p>
+                            Possuímos uma equipe altamente profissional, que
+                            está sempre à disposição para dar suporte.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
         <footer></footer>
         <script>
