Alterado para "ilimitado"

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                         </p>
                     </div>
                     <div class="card-advantages">
-                        <h4>TRÁFEGO LIMITADO</h4>
+                        <h4>TRÁFEGO ILIMITADO</h4>
                         <p>
                             Acesse seus sites, baixe músicas e assista vídeos
                             sem se preocupar com limite de tráfego.
