adicionado client-comments e footer

--- a/index.html
+++ b/index.html
@@ -308,8 +308,74 @@
                     </div>
                 </div>
             </div>
+            <div class="client-feedback">
+                <div class="client-feedback-title">
+                    <h1>
+                        Nosso foco é levar internet de qualidade para nossos
+                        clientes, aliado com um excelente atendimento!
+                    </h1>
+                </div>
+                <div class="client-feedback-container">
+                    <div class="client-feedback-card">
+                        <div class="client-photo">
+                            <img src="./assets/file.png" alt="client-photo" />
+                        </div>
+                        <div class="client-feedback-message">
+                            <p>
+                                Impressionada com a estabilidade e velocidade da
+                                internet da Navelinknet. Serviço de instalação
+                                rápido e suporte técnico sempre disponível.
+                            </p>
+
+                            <div class="client-name">
+                                <h4>Railene Santana</h4>
+                            </div>
+                            <div class="star">
+                                <i class="bi bi-star-fill yellow"></i>
+                                <i class="bi bi-star-fill yellow"></i>
+                                <i class="bi bi-star-fill yellow"></i>
+                                <i class="bi bi-star-fill yellow"></i>
+                                <i class="bi bi-star-fill"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="client-feedback-card">
+                        <div class="client-photo">
+                            <img src="./assets/file.png" alt="client-photo" />
+                        </div>
+                        <div class="client-feedback-message">
+                            <p>
+                                Impressionada com a estabilidade e velocidade da
+                                internet da Navelinknet. Serviço de instalação
+                                rápido e suporte técnico sempre disponível.
+                            </p>
+
+                            <div class="client-name">
+                                <h4>Railene Santana</h4>
+                            </div>
+                            <div class="star">
+                                <i class="bi bi-star-fill yellow"></i>
+                                <i class="bi bi-star-fill yellow"></i>
+                                <i class="bi bi-star-fill yellow"></i>
+                                <i class="bi bi-star-fill yellow"></i>
+                                <i class="bi bi-star-fill yellow"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <footer></footer>
+        <footer>
+            <div class="social-media">
+                <i class="bi bi-whatsapp"></i>
+                <i class="bi bi-instagram"></i>
+                <i class="bi bi-facebook"></i>
+            </div>
+            <div class="terms">
+                <a href="">Termos de Uso</a>
+                <a href="">Políticas de Privacidade</a>
+            </div>
+        </footer>
         <script>
             function displayDetails(element) {
                 var cardDetails = element.nextElementSibling;
