adicionado icons white

--- a/index.html
+++ b/index.html
@@ -279,6 +279,11 @@
                 </div>
                 <div class="advantages">
                     <div class="card-advantages">
+                        <img
+                            class="img-benefits"
+                            src="./assets/icons8-wifi-100.png"
+                            alt="wifi--v2"
+                        />
                         <h4>CONEXÃO ESTÁVEL</h4>
                         <p>
                             Navegue tranquilamente no seu dia a dia sem
@@ -286,6 +291,11 @@
                         </p>
                     </div>
                     <div class="card-advantages">
+                        <img
+                            class="img-benefits"
+                            src="./assets/icons8-tech-100.png"
+                            alt="circuit"
+                        />
                         <h4>ALTA TECNOLOGIA</h4>
                         <p>
                             Trabalhamos com o que há de mais moderno para
@@ -293,6 +303,11 @@
                         </p>
                     </div>
                     <div class="card-advantages">
+                        <img
+                            class="img-benefits"
+                            src="./assets/icons8-speed-100.png"
+                            alt="speed--v1"
+                        />
                         <h4>TRÁFEGO ILIMITADO</h4>
                         <p>
                             Acesse seus sites, baixe músicas e assista vídeos
@@ -300,6 +315,11 @@
                         </p>
                     </div>
                     <div class="card-advantages">
+                        <img
+                            class="img-benefits"
+                            src="./assets/icons8-headset-100.png"
+                            alt="headset--v1"
+                        />
                         <h4>SUPORTE PROFISSIONAL</h4>
                         <p>
                             Possuímos uma equipe altamente profissional, que
