--- a/index.html
+++ b/index.html
@@ -342,9 +342,10 @@
                         </div>
                         <div class="client-feedback-message">
                             <p>
-                                Impressionada com a estabilidade e velocidade da
-                                internet da Navelinknet. Serviço de instalação
-                                rápido e suporte técnico sempre disponível.
+                                Ótima qualidade de conexão e atendimento ao
+                                cliente rápido e eficiente. Recomendo a
+                                Navelinknet para quem busca uma internet de alta
+                                qualidade.
                             </p>
 
                             <div class="client-name">
