--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     <body>
         <header>
             <div class="header-1">
-                <div class="logo">
-                    <img src="./assets/logo.png" alt="LogoNavelink" />
-                </div>
+                <img src="./assets/logo.png" alt="LogoNavelink" />
                 <div class="city"><i class="bi bi-geo-alt"></i> Limeira</div>
             </div>
             <div class="header-2">
@@ -49,7 +47,7 @@
                         </div>
                     </div>
                     <div class="apps-img-container">
-                        <div class="teste">
+                        <div class="appLogoContainer">
                             <img
                                 class="appLogo"
                                 src="./assets/looke-logo.png"
@@ -57,11 +55,11 @@
                             />
                         </div>
                         <img
-                            class="teste"
+                            class="appLogoContainer"
                             src="./assets/deezer-logo.png"
                             alt="HBOMAXLogo"
                         />
-                        <div class="teste">
+                        <div class="appLogoContainer">
                             <img
                                 class="appLogo max"
                                 src="./assets/max-logo.png"
@@ -127,7 +125,7 @@
                         </div>
                     </div>
                     <div class="apps-img-container">
-                        <div class="teste">
+                        <div class="appLogoContainer">
                             <img
                                 class="appLogo"
                                 src="./assets/looke-logo.png"
@@ -135,11 +133,11 @@
                             />
                         </div>
                         <img
-                            class="teste"
+                            class="appLogoContainer"
                             src="./assets/deezer-logo.png"
                             alt="HBOMAXLogo"
                         />
-                        <div class="teste">
+                        <div class="appLogoContainer">
                             <img
                                 class="appLogo max"
                                 src="./assets/max-logo.png"
@@ -200,7 +198,7 @@
                         </div>
                     </div>
                     <div class="apps-img-container">
-                        <div class="teste">
+                        <div class="appLogoContainer">
                             <img
                                 class="appLogo"
                                 src="./assets/looke-logo.png"
@@ -208,11 +206,11 @@
                             />
                         </div>
                         <img
-                            class="teste"
+                            class="appLogoContainer"
                             src="./assets/deezer-logo.png"
                             alt="HBOMAXLogo"
                         />
-                        <div class="teste">
+                        <div class="appLogoContainer">
                             <img
                                 class="appLogo max"
                                 src="./assets/max-logo.png"
