--- a/index.html
+++ b/index.html
@@ -336,7 +336,10 @@
                 <div class="client-feedback-container">
                     <div class="client-feedback-card">
                         <div class="client-photo">
-                            <img src="./assets/file.png" alt="client-photo" />
+                            <img
+                                src="./assets/file-tiago.png"
+                                alt="client-photo"
+                            />
                         </div>
                         <div class="client-feedback-message">
                             <p>
@@ -347,20 +350,16 @@
                             </p>
 
                             <div class="client-name">
-                                <h4>Railene Santana</h4>
-                            </div>
-                            <div class="star">
-                                <i class="bi bi-star-fill yellow"></i>
-                                <i class="bi bi-star-fill yellow"></i>
-                                <i class="bi bi-star-fill yellow"></i>
-                                <i class="bi bi-star-fill yellow"></i>
-                                <i class="bi bi-star-fill"></i>
+                                <h4>Tiago Antonio</h4>
                             </div>
                         </div>
                     </div>
                     <div class="client-feedback-card">
                         <div class="client-photo">
-                            <img src="./assets/file.png" alt="client-photo" />
+                            <img
+                                src="./assets/file-railene.png"
+                                alt="client-photo"
+                            />
                         </div>
                         <div class="client-feedback-message">
                             <p>
@@ -371,13 +370,6 @@
 
                             <div class="client-name">
                                 <h4>Railene Santana</h4>
-                            </div>
-                            <div class="star">
-                                <i class="bi bi-star-fill yellow"></i>
-                                <i class="bi bi-star-fill yellow"></i>
-                                <i class="bi bi-star-fill yellow"></i>
-                                <i class="bi bi-star-fill yellow"></i>
-                                <i class="bi bi-star-fill yellow"></i>
                             </div>
                         </div>
                     </div>
